package Strategies;

public class AggressiveStrat extends Astrategy{
}
