package Strategies;

public class DefensiveStrat extends Astrategy{
}
