package Strategies;

public class StaticMappedStrat extends Astrategy{
}
